--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.5.6",
+    "moment": "^2.22.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-firebaseui": "^3.1.2",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
